<resources>
    <string name="app_name">Posts</string>
    <string name="action_delete_cache">Delete Cache</string>
    <!-- Strings used for fragments for navigation -->
    <string name="posts_fragment_label">Posts</string>
    <string name="create_posts_fragment_label">Create Post</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="create_post_enter_body">Enter Body:</string>
    <string name="create_post_enter_title">Enter title:</string>
    <string name="create_post_enter_user_id">Enter User Id:</string>
    <string name="create_post_enter_id">Enter Id:</string>
    <string name="create_post_create_btn">Create</string>
    <string name="details_fragment_label">Post Details</string>
    <string name="details_id_label">ID:</string>
    <string name="details_user_id_label">User Id:</string>
    <string name="details_title_label">Title:</string>
    <string name="details_body_label">Body:</string>
</resources>