<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/postsFragment">

    <fragment
        android:id="@+id/postsFragment"
        android:name="com.example.posts.views.PostsFragment"
        android:label="@string/posts_fragment_label"
        tools:layout="@layout/posts_fragment">

        <action
            android:id="@+id/action_PostsFragment_to_CreatePostFragment"
            app:destination="@id/createPostFragment" />
        <action
            android:id="@+id/action_PostsFragment_to_DetailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/createPostFragment"
        android:name="com.example.posts.views.CreatePostFragment"
        android:label="@string/create_posts_fragment_label"
        tools:layout="@layout/create_post_fragment">

        <action
            android:id="@+id/action_CreatePostFragment_to_PostsFragment"
            app:destination="@id/postsFragment" />
    </fragment>

    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.example.posts.views.DetailsFragment"
        android:label="@string/details_fragment_label"
        tools:layout="@layout/create_post_fragment"/>
    <action
        android:id="@+id/action_DetailsFragment_to_PostFragment"
        app:destination="@id/postsFragment" />
</navigation>